old review cards deleted

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <!-- Scrollable cards container -->
         <div id="cards-container" class="flex overflow-x-auto whitespace-nowrap p-1 scrollbar-hide items-start"> 
 
-          <!-- card 1 NEW t21 -->
+          <!-- card 1-->
           <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
             <div class="flex flex-row mx-2 py-1">
               <img class="w-20 h-20 rounded-lg" src="./images/clients/01-K-no-frame.jpg" alt="user avatar" width="200" height="200" loading="lazy">
@@ -311,106 +311,88 @@
             </div>
 
           </div>
-          <!-- card 1 -->
-          <div class="flex flex-shrink-0 max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2">
-            <div class="w-1/3 bg-cover bg-landscape shadow-xl"
-            style="
-            max-width: 1600px;
-            height: 12rem;
-            background-image: 
-            url('./images/clients/01-K.jpg'); 
-            background-position: right;
-          "
-            >
-              <!-- picture  -->
-            </div>
-            <div class="w-2/3 p-4">
-                <h1 class="text-2xl font-bold text-gray-900">
-                  Kristen
-                </h1>
-                <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">               
-                  I enthusiastically recommend Jacint as a property manager, he has totally turned around my vacation rental.  He is extremely hard working and conscientious.  When there has been any sort of issue with a stay, he has been responsive, professional and courteous. He has automatized and synchronized all of my listings and the results have been nothing short of remarkable, with total bookings way up, net income way up, and the condition of my properties pristine. 
-                  <br/>
-                  If you have the opportunity to work with Jacint, you will not be sorry.
-                  <br/>
-                  K. Sparrow, MD
-                </p>
-                <div class="flex mt-2 item-center">
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                </div>
-            </div>
-          </div>
+          <div class="flex flex-shrink-0 flex-col">
           <!-- card 2 -->
-          <div class="flex flex-shrink-0 max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2">
-            <div class="w-1/3 bg-cover bg-landscape shadow-xl"
-            style="
-            max-width: 1600px;
-            height: 12rem;
-            background-image: 
-            url('./images/clients/03-TCC.jpg'); 
-          "
-            >
-              <!-- picture  -->
-            </div>
-            <div class="w-2/3 p-4">
-                <h1 class="text-2xl font-bold text-gray-900">
-                  TopCapCana
-                </h1>
-                <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">               
-                  La rentabilidad ha mejorado muchísimo y la atención a los detalles es espectacular. 
-                  <br/>
-                  ¡Recomendadísimos!
-                </p>
-                <div class="flex mt-2 item-center">
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                </div>
-                <!-- <div class="flex justify-between mt-3 item-center">
-                    <h1 class="text-xl font-bold text-gray-700">
+            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
+              <div class="flex flex-row mx-2 py-1">
+                <img class="w-20 h-20 rounded-lg" src="./images/clients/04-Sole.jpg" alt="user avatar" width="200" height="200" loading="lazy">
+                <div class="p-4">
+                    <h1 class="text-2xl font-bold text-gray-900">
+                      Sole
                     </h1>
-                </div> -->
+                </div>
             </div>
-          </div>
+              <p class="mx-2 text-sm text-gray-600" style="white-space: normal;">               
+                Desde que Jacint lleva la gestión el apartamento está precioso y da una rentabilidad sorprendentemente buena!
+              </p>
+              <!-- stars -->
+              <div class="flex mx-2 item-center py-2 px-2">
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+              </div>
+            </div>
 
+            <!-- card 3-->
+            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
+              <div class="flex flex-row mx-2 py-1">
+                <img class="w-20 h-20 rounded-lg" src="./images/clients/03-TCC.jpg" alt="user avatar" width="200" height="200" loading="lazy">
+                <div class="p-4">
+                    <h1 class="text-2xl font-bold text-gray-900">
+                      TopCapCana
+                    </h1>
+                </div>
+            </div>
+            
+            <p class="mx-2 text-sm text-gray-600" style="white-space: normal;">               
+              La rentabilidad ha mejorado muchísimo y la atención a los detalles es espectacular. 
+              <br/>
+              ¡Recomendadísimos!
+            </p>
+              <!-- stars -->
+              <div class="flex mx-2 item-center py-2 px-2">
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+              </div>
+            </div>
+          </div> 
 
-          <!-- card 3 NEW t21 -->
+          <!-- card 4-->
           <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
             <div class="flex flex-row mx-2 py-1">
               <img class="w-20 h-20 rounded-lg" src="./images/clients/02-A-Y.jpg" alt="user avatar" width="200" height="200" loading="lazy">
@@ -447,93 +429,6 @@
                 </svg>
             </div>
 
-          </div>
-          <!-- card 3 -->
-          <div class="flex flex-shrink-0 max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2">
-            <div class="w-1/3 bg-cover bg-landscape shadow-xl"
-            style="
-            max-width: 1600px;
-            height: 12rem;
-            background-image: 
-            url('./images/clients/02-A-Y.jpg'); 
-          "
-            >
-              <!-- picture  -->
-            </div>
-            <div class="w-2/3 p-4">
-                <h1 class="text-2xl font-bold text-gray-900">
-                  Arturo y Yaiza
-                </h1>
-                <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">
-                  Desde el primer momento, Jacint nos inspiró mucha confianza. Es un co-anfitrión muy atento a los detalles, tanto en la gestión de nuestro apartamento en Begur como de las necesidades de los huéspedes. Además, nos ha dado excelentes consejos sobre los precios según las temporadas, lo que nos ha ayudado a gestionar mejor las expectativas. También se toma el tiempo para sugerir mejoras en el apartamento, lo que demuestra su dedicación y compromiso para que todo funcione perfectamente. Sin duda, es un placer contar con él como coanfitrión, y lo recomendamos al 100%. ¡Gracias, Jacint!
-                </p>
-                <div class="flex mt-2 item-center">
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                </div>
-            </div>
-          </div>
-
-          <!-- card 4 -->
-          <div class="flex flex-shrink-0 max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2">
-            <div class="w-1/3 bg-cover bg-landscape shadow-xl"
-            style="
-            max-width: 1600px;
-            height: 12rem;
-            background-image: 
-            url('./images/clients/04-Sole-02.jpg'); 
-          "
-            >
-              <!-- picture  -->
-            </div>
-            <div class="w-2/3 p-4">
-                <h1 class="text-2xl font-bold text-gray-900">
-                  Sole
-                </h1>
-                <p class="mt-2 text-sm text-gray-600" style="white-space: normal;">
-                  Desde que Jacint lleva la gestión el apartamento está precioso y da una rentabilidad sorprendentemente buena!
-                </p>
-                <div class="flex mt-2 item-center">
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                    <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                        <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                        </path>
-                    </svg>
-                </div>
-            </div>
           </div>
           <!-- Add more cards as needed -->
         </div>
