x margins decreased in reveiw cards block

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div id="cards-container" class="flex overflow-x-auto whitespace-nowrap p-1 scrollbar-hide items-start"> 
 
           <!-- card 1-->
-          <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
+          <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 p-2">
             <div class="flex flex-row mx-2 py-1">
               <img class="w-20 h-20 rounded-lg" src="./images/clients/01-K-no-frame.jpg" alt="user avatar" width="200" height="200" loading="lazy">
               <div class="p-4">
@@ -313,7 +313,7 @@
           </div>
           <div class="flex flex-shrink-0 flex-col">
           <!-- card 2 -->
-            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
+            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 p-2">
               <div class="flex flex-row mx-2 py-1">
                 <img class="w-20 h-20 rounded-lg" src="./images/clients/04-Sole.jpg" alt="user avatar" width="200" height="200" loading="lazy">
                 <div class="p-4">
@@ -351,7 +351,7 @@
             </div>
 
             <!-- card 3-->
-            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
+            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 mt-2 p-2">
               <div class="flex flex-row mx-2 py-1">
                 <img class="w-20 h-20 rounded-lg" src="./images/clients/03-TCC.jpg" alt="user avatar" width="200" height="200" loading="lazy">
                 <div class="p-4">
@@ -393,7 +393,7 @@
           </div> 
 
           <!-- card 4-->
-          <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl m-2 p-2">
+          <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 p-2">
             <div class="flex flex-row mx-2 py-1">
               <img class="w-20 h-20 rounded-lg" src="./images/clients/02-A-Y.jpg" alt="user avatar" width="200" height="200" loading="lazy">
               <div class="p-4">
