top photo justify-center and some other small visual improovements

--- a/index.html
+++ b/index.html
@@ -140,20 +140,24 @@
 
     <!-- top photo section -->
     <section
-      class="w-full mx-auto bg-nordic-gray-light flex pt-24 md:pt-0 md:items-center bg-cover bg-left"
+      class="w-full mx-auto bg-nordic-gray-light flex pt-16 md:pt-0 md:items-center justify-center bg-cover bg-left"
       style="
         max-width: 1600px;
         height: 24rem;
         background-image: 
         url('./images/top_section_image.jpg'); 
+        background-position: center; /* Centers the image */
       "
     >
       <div class="container mx-auto">
         <div
           class="flex flex-col w-full lg:w-8/12 justify-center items-start px-6 tracking-wide"
         >
-          <div class="px-3 mb-8 rounded shadow-xl bg-blue-300 bg-opacity-50">
-            <h1 class="text-gray-100 text-2xl md:text-4xl mb-4 font-bold">Alquila tu casa mientras no la usas<h1>
+          <div class="px-3 rounded shadow-xl bg-blue-300 bg-opacity-50">
+            <h1 class="text-gray-100 text-2xl md:text-4xl mb-2 font-bold">Alquila tu casa mientras no la usas<h1>
+          </div>
+          <div class="p-12 m-2">
+            <br/>
           </div>
           <div class="col-span-2 text-right">
             <button type="submit" 
