card 3 text changed

--- a/index.html
+++ b/index.html
@@ -315,46 +315,9 @@
             </div>
 
           </div>
+          <!-- vertical block for small cards -->
           <div class="flex flex-shrink-0 flex-col">
-          <!-- card 2 -->
-            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 p-2">
-              <div class="flex flex-row mx-2 py-1">
-                <img class="w-20 h-20 rounded-lg" src="./images/clients/04-Sole.jpg" alt="user avatar" width="200" height="200" loading="lazy">
-                <div class="p-4">
-                    <h1 class="text-2xl font-bold text-gray-900">
-                      Sole
-                    </h1>
-                </div>
-            </div>
-              <p class="mx-2 text-sm text-gray-600" style="white-space: normal;">               
-                Desde que Jacint lleva la gestión el apartamento está precioso y da una rentabilidad sorprendentemente buena!
-              </p>
-              <!-- stars -->
-              <div class="flex mx-2 item-center py-1 px-2">
-                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                      </path>
-                  </svg>
-                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                      </path>
-                  </svg>
-                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                      </path>
-                  </svg>
-                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                      </path>
-                  </svg>
-                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
-                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
-                      </path>
-                  </svg>
-              </div>
-            </div>
-
-            <!-- card 3-->
+            <!-- card 2-->
             <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 mt-2 p-2">
               <div class="flex flex-row mx-2 py-1">
                 <img class="w-20 h-20 rounded-lg" src="./images/clients/03-TCC.jpg" alt="user avatar" width="200" height="200" loading="lazy">
@@ -365,10 +328,15 @@
                 </div>
             </div>
             
-            <p class="mx-2 text-sm text-gray-600" style="white-space: normal;">               
-              La rentabilidad ha mejorado muchísimo y la atención a los detalles es espectacular. 
+            <p class="mx-2 text-sm text-gray-600" style="white-space: normal;"> 
+              Jacint truly knows how to manage.
               <br/>
-              ¡Recomendadísimos!
+              Basically it makes my live easier and my revenue is now 27% higher!
+              <br/>
+              He keeps me well informed and speaks several languages, that gives him an advantage.
+              <br/>
+              Thanks Jacint, feel free to give my number if someone wants more feedback from me.               
+              
             </p>
               <!-- stars -->
               <div class="flex mx-2 item-center py-1 px-2">
@@ -396,7 +364,7 @@
             </div>
           </div> 
 
-          <!-- card 4-->
+          <!-- card 3 -->
           <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 p-2">
             <div class="flex flex-row mx-2 py-1">
               <img class="w-20 h-20 rounded-lg" src="./images/clients/02-A-Y.jpg" alt="user avatar" width="200" height="200" loading="lazy">
@@ -434,7 +402,45 @@
             </div>
 
           </div>
-          <!-- Add more cards as needed -->
+
+          <!-- card 4 -->
+            <div class="flex flex-shrink-0 flex-col max-w-md overflow-hidden bg-white rounded-lg shadow-xl mx-2 p-2">
+              <div class="flex flex-row mx-2 py-1">
+                <img class="w-20 h-20 rounded-lg" src="./images/clients/04-Sole.jpg" alt="user avatar" width="200" height="200" loading="lazy">
+                <div class="p-4">
+                    <h1 class="text-2xl font-bold text-gray-900">
+                      Sole
+                    </h1>
+                </div>
+            </div>
+              <p class="mx-2 text-sm text-gray-600" style="white-space: normal;">               
+                Desde que Jacint lleva la gestión el apartamento está precioso y da una rentabilidad sorprendentemente buena!
+              </p>
+              <!-- stars -->
+              <div class="flex mx-2 item-center py-1 px-2">
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+                  <svg class="w-5 h-5 text-yellow-500 fill-current" viewBox="0 0 24 24">
+                      <path d="M12 17.27L18.18 21L16.54 13.97L22 9.24L14.81 8.63L12 2L9.19 8.63L2 9.24L7.46 13.97L5.82 21L12 17.27Z">
+                      </path>
+                  </svg>
+              </div>
+            </div>
+            <!-- Add more cards as needed -->
         </div>
 
         <!-- Right button -->
