--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
     <!-- top photo section -->
     <section
-      class="w-full mx-auto bg-nordic-gray-light flex md:pt-0 md:items-center justify-center bg-cover bg-left"
+      class="w-full mx-auto bg-nordic-gray-light flex pt-16 md:pt-0 md:items-center justify-center bg-cover bg-left"
       style="
         max-width: 1600px;
         height: 24rem;
@@ -156,7 +156,7 @@
           <div class="px-3 rounded shadow-xl bg-blue-300 bg-opacity-50">
             <h1 class="text-gray-100 text-2xl md:text-4xl mb-2 font-bold">Alquila tu casa mientras no la usas<h1>
           </div>
-          <div class="p-16 m-2">
+          <div class="p-12 m-2">
             <br/>
           </div>
           <div class="col-span-2 text-right">
