--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
               Disfrute su casa cuando lo desee bloqueando fechas en el calendario!
             </span>
           </li>
+          <li class="mb-3 flex items-center ">
+            <svg class="w-6 h-6 mr-2 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" width="6" height="6" stroke="currentColor" fill="#10b981" viewBox="0 0 1792 1792">
+                <path d="M1412 734q0-28-18-46l-91-90q-19-19-45-19t-45 19l-408 407-226-226q-19-19-45-19t-45 19l-91 90q-18 18-18 46 0 27 18 45l362 362q19 19 45 19 27 0 46-19l543-543q18-18 18-45zm252 162q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z">
+                </path>
+            </svg>
+            <span class="flex-grow">
+              Registro de la propiedad y de viajeros a las autoridades competentes
+            </span>
+          </li>
         </ul>
         <div class="col-span-2 text-center">
           <button type="submit" 
@@ -573,7 +582,7 @@
       class="w-full mx-auto bg-nordic-gray-light border-t border-gray-300 flex pt-2 md:pt-0 md:items-center bg-cover bg-right"
       style="
         max-width: 1600px;
-        height: 50rem;
+        height: 54rem;
         background-image: 
         url('./images/02-cut-istockphoto-909979066.jpg'); 
       "
