unused comment deleted

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 </path>
             </svg>
             <span class="flex-grow">
-              Registro de la propiedad y de viajeros a las autoridades competentes
+              Registro de la propiedad y de viajeros a las autoridades competentes.
             </span>
           </li>
         </ul>
@@ -264,10 +264,6 @@
         </div>
       </div>
     </section>
-
-    <!-- NEW review cards scroll block -->
-    
-
 
     <!-- review cards scroll block -->
     <section id="hosts">
