language selector js temporary solution with duplication of function

--- a/index.html
+++ b/index.html
@@ -113,18 +113,21 @@
         <div class="order-2 md:order-3 md:w-5/12 flex items-center justify-end" id="nav-content">
         <!-- Language selector   -->
           <!-- <div class="col-span-1 md:mr-6">
-                <select id="languages" class="block px-3 py-2 bg-blue-100 border border-gray-100 rounded-md shadow-md w-18 focus:outline-none focus:ring-primary-500 focus:border-primary-500" name="language">
-                  <option value="esp">
-                    ESP
-                  </option>
-                  <option value="cat">
-                    CAT
-                  </option>                 
-                  <option value="eng">
-                    ENG
-                  </option>
-
-                </select>
+              <select id="languages" 
+              class="block px-3 py-2 bg-blue-100 border border-gray-100 rounded-md shadow-md w-18 focus:outline-none focus:ring-primary-500 focus:border-primary-500" 
+              name="language"
+              onchange="changeLanguageEspIndex()"
+              >
+                <option value="esp">
+                  ESP
+                </option>
+                <option value="cat">
+                  CAT
+                </option>
+                <option value="eng">
+                  ENG
+                </option>           
+              </select>
           </div> -->
         <!-- User icon   -->
            <!-- <a class="pl-3 inline-block no-underline hover:text-black"  href="./html/es/login.html">
